test/compile-fail/find-file/duplicate-module-files-io-error1/expected.txt
error: couldn't read ./test/compile-fail/find-file/duplicate-module-files-io-error1/a.rhdl: Permission denied (os error 13)
  ┌─ ./test/compile-fail/find-file/duplicate-module-files-io-error1/top.rhdl:1:1
  │
1 │ mod a;
  │ ^^^^^^ declared here

